--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
              </div>
             </fieldset>
          </div>
-         </div class="my-2"> 
+         <div class="my-2"> 
         <button class="btn btn-primary" type="submit">Pesquisar</button> 
          </div>
      </form>
